# todo_app_smlt

./: Dockerfile  README.md  api_app.py  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  todos.json  vercel.json  web_app.py
.claudecode/: agents.json  skills.json  subagents.json
api/: tasks.js
api/tasks/: [id].js
public/: index.html
specs/: PLAN-implementation.md  SPEC-001-add-task.md  SPEC-002-list-tasks.md  SPEC-003-update-task.md  SPEC-004-delete-task.md  SPEC-005-toggle-status.md
src/todo/: __init__.py  exceptions.py  main.py
src/todo/commands/: __init__.py  add.py  delete.py  list.py  toggle.py  update.py
src/todo/models/: __init__.py  task.py
src/todo/storage/: __init__.py  file.py  memory.py
src/todo/utils/: __init__.py  helpers.py
src/todo/web/: __init__.py  streamlit.py
templates/: index.html
web/: main.py
web/static/: placeholder.txt
web/templates/: index.html
